# sectarii

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: food.rs  main.rs  sectarii.rs  ui.rs
